add global toast
Signed-off-by: Asutorufa <16442314+Asutorufa@users.noreply.github.com>

--- a/public/static/manifest.json
+++ b/public/static/manifest.json
@@ -1,14 +1,14 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "yuhaiin",
+  "name": "a proxy client for linux/windows/darwin",
   "icons": [
     {
-      "src": "static/favicon.ico",
+      "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "static/logo192.png",
+      "src": "logo192.png",
       "type": "image/png",
       "sizes": "192x192"
     }
