--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
-    "bootstrap": "5.0.2",
+    "bootstrap": "^v5.3.0",
     "bootstrap-icons": "^1.10.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
