--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "sideEffects": false,
   "eslintConfig": {
     "extends": [
       "react-app",
