--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
-    "bootstrap": "^v5.3.0",
+    "bootstrap": "^v5.3.1",
     "bootstrap-icons": "^1.10.5",
+    "buffer": "^6.0.3",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.4",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
-    "typescript": "^5.1.3",
-    "web-vitals": "^2.1.4"
+    "ts-proto": "^1.156.8",
+    "typescript": "^5.2.2",
+    "web-vitals": "^3.4.0"
   },
   "overrides": {
     "react-scripts": {
