--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
     "bootstrap": "^v5.3.1",
     "bootstrap-icons": "^1.10.5",
     "buffer": "^6.0.3",
+    "next": "^13.4.19",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
     "ts-proto": "^1.156.8",
     "typescript": "^5.2.2",
     "web-vitals": "^3.4.0"
@@ -28,10 +27,10 @@
     }
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "GENERATE_SOURCEMAP=false react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "export": "next export"
   },
   "sideEffects": false,
   "eslintConfig": {
@@ -51,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "compression-webpack-plugin": "^10.0.0",
+    "eslint": "^8.48.0"
   }
 }
