fix nav active bug && optimize loading page & toast
Signed-off-by: Asutorufa <16442314+Asutorufa@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "export": "next export"
+    "start": "next start"
   },
   "devDependencies": {
     "eslint": "^8.48.0",
