update github action
Signed-off-by: Asutorufa <16442314+Asutorufa@users.noreply.github.com>

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,6 +32,15 @@ jobs:
         CI: false
     
     
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        personal_token: ${{ secrets.PERSONAL_TOKEN }}
+        publish_dir: ./out
+        external_repository: yuhaiin/yuhaiin.github.io
+        publish_branch: main  # default: gh-pages
+        enable_jekyll: false
+
     - name: upload_static
       uses: actions/upload-artifact@v3
       with:
