--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "@types/react-dom": "^18.2.7",
     "bootstrap": "^v5.3.1",
     "bootstrap-icons": "^1.10.5",
-    "immer": "^10.0.2",
     "next": "^13.4.19",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "swr": "^2.2.2",
     "ts-proto": "^1.157.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "protobufjs": "^7.2.5"
   },
   "scripts": {
     "dev": "next dev",
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "eslint": "^8.49.0",
-    "eslint-config-next": "^13.4.19"
+    "eslint-config-next": "^13.4.19",
+    "protobufjs-cli": "^1.1.2"
   }
 }
