--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-icons": "^1.11.3",
     "next": "^14.2.3",
     "react-bootstrap": "^2.10.2",
+    "shlex": "^2.1.2",
     "swr": "^2.2.5",
     "typescript": "^5.4.5"
   },
