use rule api to control
Signed-off-by: Asutorufa <16442314+Asutorufa@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-icons": "^1.11.3",
     "next": "^15.3.1",
     "react-bootstrap": "^2.10.9",
+    "react-select": "^5.10.1",
     "shlex": "^2.1.2",
     "swr": "^2.3.3",
     "typescript": "^5.8.3"
