--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "^15.3.3",
     "react-bootstrap": "^2.10.9",
     "react-select": "^5.10.1",
+    "react-window": "^1.8.11",
     "shlex": "^2.1.2",
     "swr": "^2.3.3",
     "typescript": "^5.8.3"
