--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bootstrap": "^v5.3.5",
     "bootstrap-icons": "^1.11.3",
     "next": "^15.3.3",
-    "react-bootstrap": "^2.10.9",
+    "react-bootstrap": "^v3.0.0-beta.4",
     "react-select": "^5.10.1",
     "react-window": "^2.1.0",
     "shlex": "^3",
