--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "@bufbuild/buf": "^1.52.0",
     "@bufbuild/protobuf": "^2.5.1",
     "@bufbuild/protoc-gen-es": "^2.5.1",
-    "@next/bundle-analyzer": "^15.3.3",
+    "@next/bundle-analyzer": "^16.0.0",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.1",
+    "babel-plugin-react-compiler": "^1.0.0",
     "bootstrap": "^v5.3.5",
     "bootstrap-icons": "^1.11.3",
-    "next": "^15.3.3",
+    "next": "^16.0.0",
     "react-bootstrap": "^v3.0.0-beta.5",
     "react-select": "^5.10.1",
     "react-window": "^2.1.0",
@@ -27,6 +28,6 @@
   },
   "devDependencies": {
     "eslint": "^9.25.0",
-    "eslint-config-next": "^15.3.1"
+    "eslint-config-next": "^16.0.0"
   }
 }
