--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-window": "^2.1.0",
     "shlex": "^3",
     "swr": "^2.3.3",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "usehooks-ts": "^3.1.1"
   },
   "scripts": {
     "dev": "next dev --turbopack",
