--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "start": "next start"
   },
   "devDependencies": {
+    "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9.25.0",
     "eslint-config-next": "^16.0.0"
   }
