--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "babel-plugin-react-compiler": "^1.0.0",
     "bootstrap": "^v5.3.5",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.5.1",
     "next": "^16.0.0",
     "react-bootstrap": "^v3.0.0-beta.5",
+    "react-chartjs-2": "^5.3.1",
     "react-window": "^2.1.0",
     "shlex": "^3",
     "swr": "^2.3.3",
