--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "shlex": "^3",
     "swr": "^2.3.3",
     "typescript": "^5.8.3",
+    "uplot": "^1.6.32",
     "usehooks-ts": "^3.1.1"
   },
   "scripts": {
