feat: Implement page transition animations for routes using framer-motion and adjust main content overflow.
Signed-off-by: Asutorufa <16442314+Asutorufa@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-plugin-react-compiler": "^1.0.0",
     "chart.js": "^4.5.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.29.0",
     "radix-ui": "^1.4.3",
     "react-bootstrap-icons": "^1.11.6",
     "react-chartjs-2": "^5.3.1",
