--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "wouter": "^3.9.0"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0",
     "build": "vite build",
     "preview": "vite preview",
     "postinstall": "patch-package"
